--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=jenkin-sample
 server.port=8081
-logging.level.org=debug
+#logging.level.org=debug
+spring.datasource.url=jdbc:sqlserver://LT-3ZQDJL3:1433;databaseName=jenkin;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=exterro-123456
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
