--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=jenkin-sample
-server.port=8081
+#server.port=8081
 #logging.level.org=debug
 spring.datasource.url=jdbc:sqlserver://LT-3ZQDJL3:1433;databaseName=jenkin;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
